Cap the heights of docs code samples, so when switching between Inky/HTML display the page height doesn't jump so dramatically. Fixes #263

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -23,34 +23,5 @@
 
 @import 'node_modules/foundation-docs/scss/foundation-docs';
 
+@import 'code';
 @import 'compatibility';
-
-// .docs-nav.menu {
-//   background-color: #fefaff;
-//
-//   a:hover {
-//     background: rgba($primary-color, 0.1);
-//   }
-// }
-//
-// .docs-nav-title {
-//   color: #9974a1;
-// }
-//
-// .docs-newsletter {
-//   background-color: darken($primary-color, 15%);
-//
-//   .button {
-//     color: $primary-color;
-//     background: white;
-//     font-weight: bold;
-//
-//     &:hover {
-//       background: #f9f9f9;
-//     }
-//   }
-// }
-//
-// .docs-emails .zurb-footer-top {
-//   background-color: darken($primary-color, 25%);
-// }
